[project]
name = "tbai-mujoco-assets"
version = "0.1.0"
description = "mujoco world assets"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "mujoco>=3.2",
    "tbai-mujoco-descriptions @ git+ssh://git@github.com/tbai-lab/tbai_mujoco_descriptions.git",
]

[project.scripts]
tbai-mujoco-assets = "tbai_mujoco_assets.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tbai_mujoco_assets"]

[tool.hatch.build.targets.sdist]
include = [
    "tbai_mujoco_assets/",
    "README.md",
    "pyproject.toml",
]
